--- a/src/tunnelvision/templates/index.html
+++ b/src/tunnelvision/templates/index.html
@@ -171,6 +171,23 @@
     <footer>
         &copy; 2023 Kyle Hess | Contact: hess.kyler@gmail.com
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", (event) => {
+            var socket = io.connect("http://" + document.domain + ":" + location.port);
+
+            socket.on("connect", () => {
+                console.log("Connected to server");
+            });
+
+            socket.on("print", (data) => {
+                const newElement = document.createElement("div");
+                newElement.innerHTML = data.text
+                document.getElementById("story-text").appendChild(newElement);
+            });
+        });
+    </script>
 </body>
 
 </html>
